# uncertainty-bench

./: .gitignore  README.md
datasets/: README.md
datasets/mini_imdb/: dev.txt  test.txt  train.txt
experiments/: README.md  benchmark-runs.md
experiments/raw_results/BERT/: 20news_BERT_ood.xlsx  CLINC150_BERT_ood.xlsx  Reuters_multilabel_BERT_ood.xlsx  imdb_BERT_ood.xlsx
experiments/raw_results/SNGP/: 2D_20news_M.xlsx  2D_20news_M_ood.xlsx  2D_AAPD_M.xlsx  2D_AAPD_M_ood.xlsx  2D_CLINC_M.xlsx  2D_CLINC_M_ood.xlsx  2D_Reuters_M.xlsx  2D_Reuters_M_ood.xlsx  2D_imdb_M.xlsx  2D_imdb_M_ood.xlsx
experiments/raw_results/ablation_concrete-dropout/: concretedrop.xlsx
experiments/raw_results/cross-domain/: amazon_reviews-books_benchmark_M.xlsx  amazon_reviews-dvd_benchmark_M.xlsx  amazon_reviews-electronics_benchmark_M.xlsx  amazon_reviews-kitchen_benchmark_M.xlsx
experiments/raw_results/diversity/: 20news_benchmark_Mraw.xlsx  AAPD_benchmark_Mraw.xlsx  CLINC150_benchmark_Mraw.xlsx  Reuters_multilabel_benchmark_Mraw.xlsx  imdb_benchmark_Mraw.xlsx
experiments/raw_results/in-domain/: 20news_benchmark_M.xlsx  AAPD_benchmark_M.xlsx  CLINC150_benchmark_M.xlsx  Reuters_multilabel_benchmark_M.xlsx  imdb_benchmark_M.xlsx
experiments/raw_results/novelty-detection/: 20news_benchmark_M_ood.xlsx  AAPD_benchmark_M_ood.xlsx  CLINC150_benchmark_M_ood.xlsx  Reuters_multilabel_benchmark_M_ood.xlsx  imdb_benchmark_M_ood.xlsx
models/: README.md
paper/: README.md
src/: README.md  pyproject.toml  setup.cfg  test_setup.sh
src/arkham/: default_config.py
src/arkham/Bayes/GP/: SNGP.py  SNGP_textCNN.py  concrete_dropnorm.py  implementation_details_SNGP-textCNN.txt
src/arkham/Bayes/GP/.ipynb_checkpoints/: classification-checkpoint.ipynb  multiclass_classification-checkpoint.ipynb
src/arkham/Bayes/MCMC/: sghmc.py  sgmcmc.py  swa.py
src/arkham/Bayes/Quantify/: BERT.py  HAN.py  USE.py  automate.py  compare.py  configs.py  data  data.py  embeddings  encoder.py  evaluate.py  evaluate_ensemble.py  experiment.py  get_logits.py  load_pretrained.py  models.py  ood.py  predict.py  pt_experiment.py  text_cnn.py  transformer.py  visualize_attention.py
src/arkham/Bayes/Quantify/.ipynb_checkpoints/: approximation-checkpoint.ipynb  synthetic-tests-checkpoint.ipynb
src/arkham/Bayes/Quantify/scripts/: clinc_ood.sh  compare_eval_ensemble.sh  concrete_p.sh  ensemble_size.sh  evaluate_amazon.sh  get_single.py  parse_timings.py  raw_evaluate.sh  rename_to_custom.sh
src/arkham/utils/: calibration_metrics.py  callbacks.py  custom_metrics.py  focal_loss.py  losses.py  lr_schedules.py  model_utils.py  regularization.py  run_flask_server.py  simple_request.py  utils.py
src/tests/: conftest.py  test_BERT.py  test_MNIST.py  test_data.py  test_loss.py  test_mcmc.py  test_regularization.py  test_swa.py  test_uncertainties.py  vocab.txt
src/tests/.ipynb_checkpoints/: test_mmd-checkpoint.py  test_sampling-checkpoint.py  test_sce-checkpoint.py
