[tool.poetry]
name = "arkham"
version = "0.1.0"
description = "experiments library with prototypes"
authors = ["Jordy <jordy@contract.fit>"]

readme = 'README.md'  # Markdown files are supported
keywords = ['research', 'Artificial Intelligence',
            'AI', 'ML', 'uncertainty quantification']

classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Web Environment",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[tool.poetry.dependencies]
python = "^3.6.4"
wheel = "^0.36.2"
numpy = "^1.16.3"
regex = "2018.2.21"
scikit-learn = "^0.23.2"
pandas = "^1.1.0"
unidecode = "^1.0"
tqdm = "^4.37"
prettytable = "^0.7.2"
torch = "^1.8.0"
transformers = "=3.1.0"#"^4.0.0" #
sacred = "^0.8.1"
edward2 = "^0.0.2"
tensorflow = "=2.3.0"
tensorflow_hub = "^0.11.0"
tensorflow_probability = "=0.11.0"
tensorflow_text = "^2.2"
smmap = "^3.0"
tensorflow_addons = "^0.12.1"
tensorflow-estimator = "^2.1.0"
matplotlib = "^3.1"
seaborn = "^0.10.0"
netcal = "^1.0"
flask = "^1.1"
nltk = "^3.5"
tensorboard-plugin-profile = "^2.3"
wandb = "^0.10.13"
openpyxl = "^3.0"
tensorflow-datasets = "^3.2"
nlp = "^0.4.0"
xlrd = "^1.2.0"
datasets = "^1.1.2"
black = "19.3b0"
statsmodels = "^0.12.1"
seqeval = "^1.2.2"
scikit-posthocs = "^0.6.6"
uncertainty-metrics = "^0.0.81"

[tool.poetry.dev-dependencies]
pytest = "^5.3.2"
pytest-cov = "^2.6.0"
mock = "^2.0"
black = { version = "^18.3-alpha.0", python = "^3.6" }
pdbpp = "^0.10.2"
ptpython = "^3.0"

[tool.black]
line-length = 120
target-version = ['py36']
skip-string-normalization = true


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

